# crossword-composer

./: README.md  main.py  pyproject.toml
algorithms/: a_star.py  csp.py
helpers/: dictionary.py  gridbuilder.py
models/: direction.py  node.py  position.py  word.py
resources/: char_grid.py  samplegrids.py  word_grid.py
