[project]
name = "crossword-composer"
version = "0.1.0"
description = ""
authors = [
    {name = "Tamer Abdulghani", email = "tamer.abdulghani@gmail.com"},
    {name = "Baptiste Fontaine", email = "b@ptistefontaine.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-constraint (>=1.4.0,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
